2002-02-20  Release Manager

	* GCC 3.0.4 Released.

2001-02-14	Joel Sherrill <joel@OARcorp.com>

	* config/cpu/m68k/bits/atomicity.h: Corrected for RTEMS targets which
	do not have a CAS instruction.

2002-01-28  Jens Rehsack <rehsack@web.de>

	libstdc++/3561
	* include/bits/ostream.tcc (__pad_char): Support -Wshadow -Werror.

2002-01-23  Richard Henderson  <rth@redhat.com>

	PR libstdc++/5198
	* config/cpu/m68k/bits/atomicity.h (__exchange_and_add): Only use
	CAS on the cpu variants that support it.  Add versions that use
	TAS and that disable interrupts.
	(__atomic_add): Use __exchange_and_add to guarantee atomicity.

2002-01-18  David Edelsohn  <edelsohn@gnu.org>

	(copy from trunk 2002-01-17  2002-01-16)
	* configure.target: Define OPT_LDFLAGS for AIX case.
	* acinclude.m4 (GLIBCPP_CHECK_LINKER_FEATURES): Do not clear
	SECTION_LDFLAGS and OPT_LDFLAGS.  Fix ac_sectionLDflags type.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2002-01-16  Benjamin Kosnik <bkoz@redhat.com>
	                    <vakatov@ncbi.nlm.nih.gov>
		
	libstdc++/3272 (copy from trunk 2001-06-11)
	libstdc++/5181
	* include/bits/streambuf.tcc (__copy_streambufs): Don't set eofbit.
	* testsuite/27_io/ostream_inserter_other.cc (test04): Add test.
	* testsuite/27_io/istream_extractor_other.cc: Fix.

2002-01-15  Loren Rittle <ljrittle@acm.org>

	* include/Makefile.am (extra_target_headers): New list of all
	target files built with ad hoc naming rules.
	(stamp-*): Handle LN_S failure in manner portable across make
	implementations.
	(install-data-local): Install header files from human-maintained
	file lists and directory components instead of non-robust find.
	* include/Makefile.in: Rebuilt.

2002-01-14  Benjamin Kosnik  <bkoz@redhat.com>

	* src/Makefile.am (libstdc___la_LDFLAGS): Increase revision number.
	* src/Makefile.in: Regenerate.

2002-01-02  Nathan Myers  <ncm@cantrip.org>
	    Loren Rittle <ljrittle@acm.org>

	libstdc++/5037 (copy from trunk 2001-12-07 and 2001-12-11)